--- a/Section 7/Project - CSS Flag/index.html
+++ b/Section 7/Project - CSS Flag/index.html
@@ -10,18 +10,18 @@
       background-color: #ce1126;
       width: 900px;
       height: 600px;
-      position: absolute;
+      position: relative;
     }
 
-    .flag-middle {
+    .flag > div {
       background-color: #002868;
-      width: 900px;
+      width: 100%;
       height: 300px;
-      position: relative;
+      position: absolute;
       top: 25%;
     }
     
-    .flag-center {
+    .flag > div > div {
       width: 200px;
       height: 200px;
       background-color: white;
@@ -29,6 +29,17 @@
       position: relative;
       top: 50px;
       left: 350px;
+    }
+
+    p {
+      margin: 0;
+      font-size: 5rem;
+      text-align: center;
+      color: white;
+    }
+
+    .flag div div p {
+      color: black;
     }
   </style>
 </head>
@@ -45,10 +56,10 @@ https://appbrewery.github.io/flag-of-laos/
 
 <body>
   <div class="flag">
-    <!-- <p>The Flag</p> -->
-    <div class="flag-middle">
-      <div class="flag-center">
-        <!-- <p>of Laos</p> -->
+    <p>The Flag</p>
+    <div>
+      <div>
+        <p>of Laos</p>
       </div>
     </div>
   </div>
